* Adding ViewFactory * Adding strings to localizable

--- a/StarWars/Localizable.strings
+++ b/StarWars/Localizable.strings
@@ -7,3 +7,14 @@
 */
 
 "Star Wars: Characters" = "Star Wars: Characters";
+"Character: Details" = "Character: Details";
+"Name" = "Name";
+"Birth Year" = "Birth Year";
+"Height" = "Height";
+"Mass" = "Mass";
+"Hair Color" = "Hair Color";
+"Skin Color" = "Skin Color";
+"Eye Color" = "Eye Color";
+"Gender" = "Gender";
+"Film" = "Film";
+"Opening crawl" = "Opening crawl";
